--- a/app/views/events/_rounds_table.html.haml
+++ b/app/views/events/_rounds_table.html.haml
@@ -10,6 +10,6 @@
   - @event.rounds.each do |t|
     = render :partial => 'round', locals: {round: t }
 
-%button.btn.btn-default{:data => {:toggle => "modal", :target => "#newRoundEventModal"}}= 'Добавить раунд'
+%button.btn.btn-default{:data => {:toggle => 'modal', :target => '#newRoundEventModal'}}= 'Добавить раунд'
 
 %hr
