--- a/app/views/track_select/track_select.html.haml
+++ b/app/views/track_select/track_select.html.haml
@@ -14,7 +14,7 @@
         %td.text-info= index
         %td.text-info= item[:name]
         %td
-          %p.text-primary{:style => "display:inline"}#{item[:h_up]}↑
-          %p.text-success{:style => "display:inline"}#{item[:h_down]}↓
+          %p.text-primary{:style => 'display:inline'}#{item[:h_up]}↑
+          %p.text-success{:style => 'display:inline'}#{item[:h_down]}↓
           =t 'units.m'
         %td.text-info= item[:points_count]
