--- a/app/views/events/_admin_tab.html.haml
+++ b/app/views/events/_admin_tab.html.haml
@@ -1,29 +1,35 @@
 .abbable.col-md-12
   %ul.nav.nav-pills.nav-stacked.col-md-2{:role =>'tablist'}
     %li.active
-      %a{:href => '#tab1', :data => {:toggle => 'tab'}}
+      %a{:href => '#m_pfs', :data => {:toggle => 'tab'}}
         = 'Заявки'
         - if @event.participation_forms.count > 0
           %span.badge.pull-right
             = @event.participation_forms.count
     %li
-      %a{:href => '#tab2', :data => {:toggle => 'tab'}}= 'Раунды'
+      %a{:href => '#m_rounds', :data => {:toggle => 'tab'}}= 'Раунды'
     %li
-      %a{:href => '#tab3', :data => {:toggle => 'tab'}}= 'Организаторы'
+      %a{:href => '#m_orgs', :data => {:toggle => 'tab'}}= 'Организаторы'
     %li
-      %a{:href => '#tab4', :data => {:toggle => 'tab'}}= 'Описание'
+      %a{:href => '#m_docs', :data => {:toggle => 'tab'}}= 'Документы'
+    %li
+      %a{:href => '#m_info', :data => {:toggle => 'tab'}}= 'Описание'
 
   .tab-content.col-md-10
-    .tab-pane.active#tab1
+    .tab-pane.active#m_pfs
       = render :partial => 'participation_forms/table'
 
-    .tab-pane#tab2
+    .tab-pane#m_rounds
       = render :partial => 'add_round_form'
       = render :partial => 'rounds_table'
 
-    .tab-pane#tab3
+    .tab-pane#m_orgs
       = render :partial => 'add_org_form'
       = render :partial => 'orgs_table'
 
-    .tab-pane#tab4
+    .tab-pane#m_docs
+      = render :partial => 'event_documents/docs_table', :locals => {:show_delete_link => true}
+      = render :partial => 'event_documents/new'
+
+    .tab-pane#m_info
       = render :partial => 'edit_event_form'
