--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -41,8 +41,8 @@
       %a{:href => '#overview', :data => {:toggle => 'tab'}}= 'Информация'
     %li
       %a{:href => '#docs', :data => {:toggle => 'tab'}}= 'Документы'
-    %li.disabled
-      %a= 'Информация об аэродроме и выброске'
+    %li
+      %a{:href => '#dz_info', :data => {:toggle => 'tab'}}= 'Информация об аэродроме'
     %li
       %a{:href => '#competitors', :data => {:toggle => 'tab'}}= 'Участники'
     - if current_user && current_user.event_admin?(@event)
@@ -60,6 +60,9 @@
     .tab-pane#docs
       %h2= 'Документы'
       = render :partial => 'event_documents/docs_table', :locals => {:show_delete_link => false}
+
+    .tab-pane#dz_info
+      = simple_format @event.dz_info
 
     .tab-pane#competitors
       = render :partial => 'competitors_table'
