--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -732,7 +732,7 @@
       <div class="dropdown-container col-md-1">
         <div class="dropdown">
           <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
-            <span class="glyphicon glyphicon-cog"></span>
+            <i class="fa fa-cog"></i>
           </button>
           <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="dropdownMenu1">
             <li role="presentation" class="dropdown-header"><%=t '.menu_header' %></li>
