work on events and application layout

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -29,6 +29,9 @@
   width: auto; display:inline;
 }
 
+@navbar-default-bg:             fade(#fff, 90%);
+@navbar-default-border:         fade(#000, 14%);
+@page-header-border-color:      fade(#000, 14%);
 //@import "twitter/bootstrap/sprites.less";
 
 // Your custom LESS stylesheets goes here
