--- a/app/views/events/_edit_event_form.html.erb
+++ b/app/views/events/_edit_event_form.html.erb
@@ -36,6 +36,16 @@
         <%= f.text_field :comp_range_to, :class => 'form-control' %>
       </div>
     </div>
+    <div class="checkbox">
+      <label>
+        <%= f.check_box :merge_intermediate_and_rookie %> Объединять "Intermediate" и "Rookie" в один класс
+      </label>
+    </div>
+    <div class="checkbox">
+      <label>
+        <%= f.check_box :allow_tracksuits %> Разрешить участие в трексьюте
+      </label>
+    </div>
     <div class="form-group">
       <%= f.label 'Описание', :class => 'col-sm-3 control-label', :for => 'Description' %>
       <div class="col-sm-9">
