--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -32,6 +32,14 @@
 @navbar-default-bg:             fade(#fff, 90%);
 @navbar-default-border:         fade(#000, 14%);
 @page-header-border-color:      fade(#000, 14%);
+
+#footer {
+  background-color: @navbar-default-bg;
+  border-top-color: @navbar-default-border;
+  border-top-style: solid;
+  border-top-width: 1px;
+}
+
 //@import "twitter/bootstrap/sprites.less";
 
 // Your custom LESS stylesheets goes here
