--- a/app/assets/stylesheets/static_pages.css
+++ b/app/assets/stylesheets/static_pages.css
@@ -1,5 +1,5 @@
-// Place all the styles related to the StaticPages controller here.
-// They will automatically be included in application.css.
+/* Place all the styles related to the StaticPages controller here.*/
+/* They will automatically be included in application.css.*/
 
 pre.prettyprint {
   border: 1px solid #999;
@@ -16,6 +16,4 @@ pre.prettyprint {
   min-width: 250px;
 }
 
-.datepicker {
-  z-index: 1151 !important;
-}
+
