--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -53,8 +53,8 @@
   .tab-content
     .tab-pane#results
       %h2= 'Результаты соревнований'
-      = render :partial => 'event_tracks/new_track'
-      = render :partial => 'event_tracks/results_table'
+      -#= render :partial => 'event_tracks/new_track'
+      -#= render :partial => 'event_tracks/results_table'
 
     .tab-pane.active#overview
       %h2= 'Описание'
