цвет панелей навигации и футера изменен на серый

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -29,8 +29,8 @@
   width: auto; display:inline;
 }
 
-@navbar-default-bg:             fade(#fff, 90%);
-@navbar-default-border:         fade(#000, 14%);
+//@navbar-default-bg:             fade(#fff, 90%);
+//@navbar-default-border:         fade(#000, 14%);
 @page-header-border-color:      fade(#000, 14%);
 
 #footer {
