--- a/app/views/participation_forms/_table.html.haml
+++ b/app/views/participation_forms/_table.html.haml
@@ -1,9 +1,9 @@
 %h3.text-danger= 'Не обработанные заявки'
 .top-buffer
   - @event.participation_forms.where(:status => 'active').each do |pf|
-    = render :partial => 'participation_forms/show', locals: {pf: pf}
+    = render :partial => 'participation_forms/show', locals: {pf: pf, merge_intermediate_and_rookie: @event.merge_intermediate_and_rookie}
 
 %h3.text-info= 'Обработанные заявки'
 .top-buffer
   - @event.participation_forms.where.not(:status => 'active').each do |pf|
-    = render :partial => 'participation_forms/show', locals: {pf: pf}
+    = render :partial => 'participation_forms/show', locals: {pf: pf, merge_intermediate_and_rookie: @event.merge_intermediate_and_rookie}
