--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -56,7 +56,8 @@
   .tab-content
     .tab-pane#results
       %h2= 'Результаты соревнований'
-      = render :partial => 'event_tracks/new_track'
+      - if current_user && current_user.event_admin?(@event)
+        = render :partial => 'event_tracks/new_track'
       = render :partial => 'event_tracks/results_table'
 
     .tab-pane.active#overview
