вывод размера футболки

--- a/app/views/participation_forms/_show.html.haml
+++ b/app/views/participation_forms/_show.html.haml
@@ -32,6 +32,9 @@
         %strong= 'Рост/Вес:'
         #{pf.user.user_profile.height} / #{pf.user.user_profile.weight}
         %br
+        %strong= 'Размер футболки:'
+        =pf.user.user_profile.shirt_size
+        %br
         %strong= 'Контактный телефон:'
         #{pf.user.user_profile.phone_number}
         %br
